examples/invalid/test17.alice

The looking-glass hatta ()
opened
  x was a letter.
  x ate.
  x drank.
closed 
